# Quant-Signal-Workstation-Forecasting-Pipeline

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  EXECUTION_PLAN.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260316_0001_initial_schema.py
src/quant_signal/: __init__.py
src/quant_signal/api/: app.py  deps.py  schemas.py
src/quant_signal/backtesting/: __init__.py  analytics.py  execution.py  regimes.py  service.py
src/quant_signal/cli/: __init__.py  pipeline.py
src/quant_signal/core/: config.py  hashing.py  logging.py  time.py
src/quant_signal/evaluation/: __init__.py  metrics.py  reporting.py
src/quant_signal/explainability/: __init__.py  service.py
src/quant_signal/features/: __init__.py  engineering.py  labels.py  pipeline.py  splits.py
src/quant_signal/ingestion/: __init__.py  errors.py  models.py  providers.py  retry.py  service.py
src/quant_signal/serving/: __init__.py  service.py
src/quant_signal/storage/: __init__.py  base.py  db.py  models.py  repositories.py
src/quant_signal/training/: __init__.py  artifacts.py  service.py
tests/: conftest.py
tests/integration/: test_backtesting_explainability.py  test_health_api.py  test_ingestion.py  test_migrations.py  test_pipeline_cli.py  test_training_api.py
tests/unit/: test_backtest_analytics.py  test_backtest_execution.py  test_config.py  test_ingestion_retry.py  test_ingestion_service.py  test_labels.py  test_metrics.py  test_regimes.py  test_splits.py
(+3 files in other folders)
